Last version of html files

--- a/www/index.html
+++ b/www/index.html
@@ -33,44 +33,20 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/google.png" />
+          <img class="logo" src="./images/clusir-paca.png" />
           <div class="secondary-info">
-            <div class="date">1er mars à 18h</div>
-            <img class="logo-location" src="./images/epitech.jpg" />
+            <div class="date">12 mars à 18h30</div>
           </div>
 
-          <h2>Google Hash Code @Epitech Nice</h2>
+          <h2>Espace RSSI par CLUSIR côte d'azur</h2>
 
           <!--
-            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">Google Hash Code @Epitech Nice</a>
+            <a class="title" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">Espace RSSI par CLUSIR côte d'azur</a>
           //-->
 
-          <p>Comme tous les ans, Google organise le Hash Code, une compétition de programmation en équipe pour résoudre un problème d’ingénierie de la vie réelle de Google</p>
+          <p>Le PIA : clé de voûte de votre conformité RGPD, par Edmond Cissé, Uraeus Consult. Exigence de l’article 35 du règlement, l’étude d’impact sur la vie privée (PIA: Privacy Impact Assessment) doit être menée pour tout projet susceptible d’engendrer des risques de sécurité élevés sur la vie privée des personnes. (...)</p>
 
-            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/google.png" />
-          <div class="secondary-info">
-            <div class="date">1er mars à 18h</div>
-            <img class="logo-location" src="./images/polytechnicesophia.png" />
-          </div>
-
-          <h2>Google Hashcode @Polytech Nice-Sophia</h2>
-
-          <!--
-            <a class="title" target="_blank" href="https://hashcode.withgoogle.com/signup.html">Google Hashcode @Polytech Nice-Sophia</a>
-          //-->
-
-          <p>Hash Code is a team programming competition organized by Google for students and industry professionals across Europe, the Middle East and Africa. You pick your team and programming language, Google picks an engineering problem for you to solve</p>
-
-            <a class="bnt-more" target="_blank" href="https://hashcode.withgoogle.com/signup.html">More</a>
+            <a class="bnt-more" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">More</a>
 
         </div>
       </div>   
@@ -82,17 +58,18 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">15 mars à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Programmation fonctionnelle</h2>
 
           <!--
-            <h2>Programmation fonctionnelle</h2>
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">Programmation fonctionnelle</a>
           //-->
 
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
 
-            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">More</a>
 
         </div>
       </div>   
@@ -104,6 +81,7 @@
           <img class="logo" src="./images/docker.png" />
           <div class="secondary-info">
             <div class="date">22 mars à 17h30</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Celebrate the Docker 5th Birthday</h2>
@@ -148,6 +126,7 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">12 avril à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Intégration continue avec GitLab-CI</h2>
@@ -214,6 +193,7 @@
           <img class="logo" src="./images/sophiaconf2018.png" />
           <div class="secondary-info">
             <div class="date">Du 2 au 5 juillet</div>
+            <img class="logo-location" src="./images/Polytech.png" />
           </div>
 
           <h2>SophiaConf édition 2018</h2>
