--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,52 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">1er mars à 18h</div>
+            <img class="logo-location" src="./images/Epitech.png" />
+          </div>
+
+          <h2>Google Hash Code @Epitech Nice</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">Google Hash Code @Epitech Nice</a>
+          //-->
+
+          <p>Comme tous les ans, Google organise le Hash Code, une compétition de programmation en équipe pour résoudre un problème d’ingénierie de la vie réelle de Google</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">1er mars à 18h</div>
+            <img class="logo-location" src="./images/Polytech.png" />
+          </div>
+
+          <h2>Google Hashcode @Polytech Nice-Sophia</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://hashcode.withgoogle.com/signup.html">Google Hashcode @Polytech Nice-Sophia</a>
+          //-->
+
+          <p>Hash Code is a team programming competition organized by Google for students and industry professionals across Europe, the Middle East and Africa. You pick your team and programming language, Google picks an engineering problem for you to solve</p>
+
+            <a class="bnt-more" target="_blank" href="https://hashcode.withgoogle.com/signup.html">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <div class="secondary-info">
             <div class="date">21 février à 18h30</div>
@@ -58,6 +104,7 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">21 février à 17h30</div>
+            <img class="logo-location" src="./images/Polytech.png" />
           </div>
 
           <h2>Tech Workshop Blockchain</h2>
@@ -80,6 +127,7 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">20 février à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Gestion d'un projet open source</h2>
@@ -102,6 +150,7 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">15 février à 18h</div>
+            <img class="logo-location" src="./images/Polytech.png" />
           </div>
 
           <h2>Soirée blockchain</h2>
@@ -146,6 +195,7 @@
           <img class="logo" src="./images/rivierajug.png" />
           <div class="secondary-info">
             <div class="date">06 février à 18h</div>
+            <img class="logo-location" src="./images/Inria.png" />
           </div>
 
           <h2>Présentation de Hazelcast</h2>
@@ -168,6 +218,7 @@
           <img class="logo" src="./images/telecomvalley-csc.png" />
           <div class="secondary-info">
             <div class="date">06 février à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Sécurité des applications cloud native</h2>
@@ -190,6 +241,7 @@
           <img class="logo" src="./images/cncf-sophia.png" />
           <div class="secondary-info">
             <div class="date">29 janvier à 17h30</div>
+            <img class="logo-location" src="./images/Amadeus.png" />
           </div>
 
           <h2>Sophia CNCF #1</h2>
@@ -212,6 +264,7 @@
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">25 janvier à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Kafka par GreenCom Network</h2>
@@ -234,6 +287,7 @@
           <img class="logo" src="./images/hashicorp.png" />
           <div class="secondary-info">
             <div class="date">23 janvier à 18h</div>
+            <img class="logo-location" src="./images/Ausy.png" />
           </div>
 
           <h2>Hashicorp User Group #2</h2>
@@ -256,6 +310,7 @@
           <img class="logo" src="./images/docker.png" />
           <div class="secondary-info">
             <div class="date">18 janvier à 18h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
           </div>
 
           <h2>Meetup Docker / RivieraJug</h2>
