Add dmca #22 details.

--- a/www/past.html
+++ b/www/past.html
@@ -90,7 +90,7 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">Développement Mobile Côte-d'Azur</a>
           //-->
 
-          <p>Au programme du #21: <b>Adopter la programmation réactive</b> par <b>Florent Pillet</b>, présentation de <b>Marvel App</b> par <b>Gregory Biondo</b></p>
+          <p>#21: <b>Adopter la programmation réactive</b> par <b>Florent Pillet</b>, présentation de <b>Marvel App</b> par <b>Gregory Biondo</b></p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
 
