--- a/www/index.html
+++ b/www/index.html
@@ -103,18 +103,18 @@
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <div class="secondary-info">
-            <div class="date">28 mars à 18h30</div>
+            <div class="date">29 mars à 12h</div>
           </div>
 
           <h2>Développement Mobile Côte-d'Azur</h2>
 
           <!--
-            <h2>Développement Mobile Côte-d'Azur</h2>
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/246061099/">Développement Mobile Côte-d'Azur</a>
           //-->
 
-          <p>#22</p>
+          <p>#22 - Présentation de <b>Macha Da Costa</b>: Il y a bientôt un an, Google a officialisé le support du langage <b>Kotlin</b> pour le développement d’application mobile Android, à la G I/O (17-19 mai 2017). Ceci étant, pourquoi Kotlin ? Quels nouveaux concepts apporte ce langage de programmation orientée objet et fonctionnelle ? Quel est l’intérêt d'utiliser ce nouveau langage par rapport au Java ? Quels sont ses limitations et peuvent-elles nuire à son adoption ? Autant de questions auxquelles cette présentation tentera de répondre.</p>
 
-            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/246061099/">More</a>
 
         </div>
       </div>   
@@ -149,17 +149,18 @@
           <img class="logo" src="./images/what06.jpeg" />
           <div class="secondary-info">
             <div class="date">14 mai à 17h30</div>
+            <img class="logo-location" src="./images/DSTI.png" />
           </div>
 
           <h2>LadiesAInight - workshop Intelligence Artificielle</h2>
 
           <!--
-            <h2>LadiesAInight - workshop Intelligence Artificielle</h2>
+            <a class="title" target="_blank" href="http://hackforwomen.com/index.php/ladies-ai-night-nice-2018/">LadiesAInight - workshop Intelligence Artificielle</a>
           //-->
 
           <p><b>WHAT06</b> vous convie à une soirée sur l'<b>AI</b> le 14 mai. Réservé en priorité aux femmes travaillant dans les milieux techniques de la Côte d'Azur, cet évènement sera animé par <b>Julien Simon</b>, Principal Evangelist ML/AI chez Amazon Web Services. Il fera une introduction au <b>Deep Learning</b> sous la forme d'un workshop.</p>
 
-            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
+            <a class="bnt-more" target="_blank" href="http://hackforwomen.com/index.php/ladies-ai-night-nice-2018/">More</a>
 
         </div>
       </div>   
