Add Kafka events for RivieraJug

--- a/www/index.html
+++ b/www/index.html
@@ -33,28 +33,6 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/clusir-paca.png" />
-          <div class="secondary-info">
-            <div class="date">12 mars à 18h30</div>
-          </div>
-
-          <h2>Espace RSSI par CLUSIR côte d'azur</h2>
-
-          <!--
-            <a class="title" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">Espace RSSI par CLUSIR côte d'azur</a>
-          //-->
-
-          <p>Le PIA : clé de voûte de votre conformité RGPD, par Edmond Cissé, Uraeus Consult. Exigence de l’article 35 du règlement, l’étude d’impact sur la vie privée (PIA: Privacy Impact Assessment) doit être menée pour tout projet susceptible d’engendrer des risques de sécurité élevés sur la vie privée des personnes. (...)</p>
-
-            <a class="bnt-more" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
           <div class="secondary-info">
             <div class="date">15 mars à 12h</div>
@@ -70,6 +48,29 @@
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
 
             <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/rivierajug.png" />
+          <div class="secondary-info">
+            <div class="date">20 mars à 18h</div>
+            <img class="logo-location" src="./images/Inria.png" />
+          </div>
+
+          <h2>Soirée Kafka</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">Soirée Kafka</a>
+          //-->
+
+          <p><b>Florent Ramière</b> viendra présenter à quoi sert <b>Kafka</b> et comment l'utiliser</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">More</a>
 
         </div>
       </div>   
