--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,28 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/clusir-paca.png" />
+          <div class="secondary-info">
+            <div class="date">12 mars à 18h30</div>
+          </div>
+
+          <h2>Espace RSSI par CLUSIR côte d'azur</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">Espace RSSI par CLUSIR côte d'azur</a>
+          //-->
+
+          <p>Le PIA : clé de voûte de votre conformité RGPD, par Edmond Cissé, Uraeus Consult. Exigence de l’article 35 du règlement, l’étude d’impact sur la vie privée (PIA: Privacy Impact Assessment) doit être menée pour tout projet susceptible d’engendrer des risques de sécurité élevés sur la vie privée des personnes. (...)</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.clusir-paca.fr/events/espace-rssi-9/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/google.png" />
           <div class="secondary-info">
             <div class="date">1er mars à 18h</div>
