Add details on Gitlab talk. Add Cloud Study Jam annoucement.

--- a/www/index.html
+++ b/www/index.html
@@ -33,75 +33,6 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-cos.png" />
-          <div class="secondary-info">
-            <div class="date">15 mars à 12h</div>
-            <img class="logo-location" src="./images/Business-Pole.png" />
-          </div>
-
-          <h2>Programmation fonctionnelle</h2>
-
-          <!--
-            <a class="title" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">Programmation fonctionnelle</a>
-          //-->
-
-          <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
-
-            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/rivierajug.png" />
-          <div class="secondary-info">
-            <div class="date">20 mars à 18h</div>
-            <img class="logo-location" src="./images/Inria.png" />
-          </div>
-
-          <h2>Soirée Kafka</h2>
-
-          <!--
-            <a class="title" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">Soirée Kafka</a>
-          //-->
-
-          <p><b>Florent Ramière</b> viendra présenter à quoi sert <b>Kafka</b> et comment l'utiliser</p>
-
-            <a class="bnt-more" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/docker.png" />
-          <div class="secondary-info">
-            <div class="date">22 mars à 17h30</div>
-            <img class="logo-location" src="./images/Business-Pole.png" />
-          </div>
-
-          <h2>Celebrate the Docker 5th Birthday</h2>
-
-          <!--
-            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">Celebrate the Docker 5th Birthday</a>
-          //-->
-
-          <p>Une nouvelle fois, venez célébrer avec nous l'anniversaire de <b>Docker</b>. Au programme: labs, présentations, gateaux, et du fun... :)</p>
-
-            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
           <div class="secondary-info">
             <div class="date">29 mars à 12h</div>
@@ -124,21 +55,21 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <img class="logo" src="./images/gfi.png" />
           <div class="secondary-info">
-            <div class="date">12 avril à 12h</div>
-            <img class="logo-location" src="./images/Business-Pole.png" />
+            <div class="date">6 avril à 18h00</div>
+            <img class="logo-location" src="./images/Golden-Tulip.png" />
           </div>
 
-          <h2>Intégration continue avec GitLab-CI</h2>
+          <h2>Open GFI - Le serverless avec AWS</h2>
 
           <!--
-            <h2>Intégration continue avec GitLab-CI</h2>
+            <a class="title" target="_blank" href="https://www.meetup.com/Open-Gfi/events/248932369/">Open GFI - Le serverless avec AWS</a>
           //-->
 
-          <p><b>Rémy Coutable</b> de GitLab viendra nous présenter <b>Gitlab-CI</b></p>
+          <p>Nous accueillerons Rémi Retureau, architecte chez Amazon, pour nous présenter les services Amazon via une démonstration d'une chaîne d'intégration et de déploiement continu. Ce sera l'occasion de parler de "Serverless".</p>
 
-            <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/Open-Gfi/events/248932369/">More</a>
 
         </div>
       </div>   
@@ -147,7 +78,76 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/what06.jpeg" />
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">12 avril à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Présentation de GitLab par <b>Rémy Coutable</b></h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/12-avril-2018-commission-open-source/">Présentation de GitLab par <b>Rémy Coutable</b></a>
+          //-->
+
+          <p>La vérité sur l’affaire GitLab ! Plongez avec moi dans cette mystérieuse affaire GitLab dont on parle tant. Je vous emmènerai dans les coulisses de la machine infernale qui sort une nouvelle version tous les 22 du mois. JIRA, Trello, Travis, GitHub, Docker Hub, oubliez tout ça, GitLab sait tout faire !</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/12-avril-2018-commission-open-source/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">17 avril à 18h00</div>
+            <img class="logo-location" src="./images/Epitech.png" />
+          </div>
+
+          <h2>Cloud Study Jam - Edition Nice</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832554/">Cloud Study Jam - Edition Nice</a>
+          //-->
+
+          <p>Venez découvrir la <b>Google Cloud Platform</b> et <b>Docker</b> en participant à notre <b>Cloud Study Jam</b> organisée conjointement par le Docker Nice Meetup et le Google Developer Group Nice qui vous proposent d'y participer à Nice ou à Sophia-Antipolis au choix et en simultané</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832554/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">17 avril à 18h00</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Cloud Study Jam - Edition Sophia-Antipolis</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832635/">Cloud Study Jam - Edition Sophia-Antipolis</a>
+          //-->
+
+          <p>Venez découvrir la <b>Google Cloud Platform</b> et <b>Docker</b> en participant à notre <b>Cloud Study Jam</b> organisée conjointement par le Docker Nice Meetup et le Google Developer Group Nice qui vous proposent d'y participer à Nice ou à Sophia-Antipolis au choix et en simultané</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832635/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/what06.png" />
           <div class="secondary-info">
             <div class="date">14 mai à 17h30</div>
             <img class="logo-location" src="./images/DSTI.png" />
