--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,75 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/docker.png" />
+          <div class="secondary-info">
+            <div class="date">22 mars à 17h30</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Celebrate the Docker 5th Birthday</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">Celebrate the Docker 5th Birthday</a>
+          //-->
+
+          <p>Une nouvelle fois, venez célébrer avec nous l'anniversaire de <b>Docker</b>. Au programme: labs, présentations, gateaux, et du fun... :)</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/rivierajug.png" />
+          <div class="secondary-info">
+            <div class="date">20 mars à 18h</div>
+            <img class="logo-location" src="./images/Inria.png" />
+          </div>
+
+          <h2>Soirée Kafka</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">Soirée Kafka</a>
+          //-->
+
+          <p><b>Florent Ramière</b> viendra présenter à quoi sert <b>Kafka</b> et comment l'utiliser</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.rivierajug.org/xwiki/bin/view/Blog/Mardi+20+mars+2018+%40+Sophia-Antipolis++soir%C3%A9e+Kafka">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">15 mars à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Programmation fonctionnelle</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">Programmation fonctionnelle</a>
+          //-->
+
+          <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-mars-2018-commission-open-source/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/clusir-paca.png" />
           <div class="secondary-info">
             <div class="date">12 mars à 18h30</div>
