--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,51 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/gfi.png" />
+          <div class="secondary-info">
+            <div class="date">6 avril à 18h00</div>
+            <img class="logo-location" src="./images/Golden-Tulip.png" />
+          </div>
+
+          <h2>Open GFI - Le serverless avec AWS</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/Open-Gfi/events/248932369/">Open GFI - Le serverless avec AWS</a>
+          //-->
+
+          <p>Nous accueillerons Rémi Retureau, architecte chez Amazon, pour nous présenter les services Amazon via une démonstration d'une chaîne d'intégration et de déploiement continu. Ce sera l'occasion de parler de "Serverless".</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/Open-Gfi/events/248932369/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">29 mars à 12h</div>
+          </div>
+
+          <h2>Développement Mobile Côte-d'Azur</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/246061099/">Développement Mobile Côte-d'Azur</a>
+          //-->
+
+          <p>#22 - Présentation de <b>Macha Da Costa</b>: Il y a bientôt un an, Google a officialisé le support du langage <b>Kotlin</b> pour le développement d’application mobile Android, à la G I/O (17-19 mai 2017). Ceci étant, pourquoi Kotlin ? Quels nouveaux concepts apporte ce langage de programmation orientée objet et fonctionnelle ? Quel est l’intérêt d'utiliser ce nouveau langage par rapport au Java ? Quels sont ses limitations et peuvent-elles nuire à son adoption ? Autant de questions auxquelles cette présentation tentera de répondre.</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/246061099/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/docker.png" />
           <div class="secondary-info">
             <div class="date">22 mars à 17h30</div>
