Add COS 6/6 + Meetup Mobile

--- a/www/past.html
+++ b/www/past.html
@@ -33,6 +33,211 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/docker.png" />
+          <div class="secondary-info">
+            <div class="date">le 29 mai à 18h00</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Meetup Docker - Security</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/250615089">Meetup Docker - Security</a>
+          //-->
+
+          <p>Let's talk about container security with Treeptik and NeuVector</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/250615089">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <div class="secondary-info">
+            <div class="date">à partir du 18 mai à 18h30</div>
+            <img class="logo-location" src="./images/Epitech.png" />
+          </div>
+
+          <h2>Startup Week-End Nice Sophia-Antipolis</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.swnsa.fr/">Startup Week-End Nice Sophia-Antipolis</a>
+          //-->
+
+          <p>Crée la boite de tes rêves en un weekend</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.swnsa.fr/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/rivieradev.png" />
+          <div class="secondary-info">
+            <div class="date">Du 16 au 18 mai</div>
+          </div>
+
+          <h2>RivieraDev édition 2018</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://rivieradev.fr">RivieraDev édition 2018</a>
+          //-->
+
+          <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
+
+            <a class="bnt-more" target="_blank" href="http://rivieradev.fr">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/what06.png" />
+          <div class="secondary-info">
+            <div class="date">14 mai à 17h30</div>
+            <img class="logo-location" src="./images/DSTI.png" />
+          </div>
+
+          <h2>LadiesAInight - workshop Intelligence Artificielle</h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://hackforwomen.com/index.php/ladies-ai-night-nice-2018/">LadiesAInight - workshop Intelligence Artificielle</a>
+          //-->
+
+          <p><b>WHAT06</b> vous convie à une soirée sur l'<b>AI</b> le 14 mai. Réservé en priorité aux femmes travaillant dans les milieux techniques de la Côte d'Azur, cet évènement sera animé par <b>Julien Simon</b>, Principal Evangelist ML/AI chez Amazon Web Services. Il fera une introduction au <b>Deep Learning</b> sous la forme d'un workshop.</p>
+
+            <a class="bnt-more" target="_blank" href="http://hackforwomen.com/index.php/ladies-ai-night-nice-2018/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">le 8 mai à 18h45</div>
+            <img class="logo-location" src="./images/Epitech.png" />
+          </div>
+
+          <h2>I/O Extended 2018 Nice</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248834944">I/O Extended 2018 Nice</a>
+          //-->
+
+          <p>Comme chaque année à cette période de l'année, Google organise la Google I/O, 2 jours de conférence à destination des développeurs organisés à San Francisco...</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248834944">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/cncf-sophia.png" />
+          <div class="secondary-info">
+            <div class="date">20 avril à 17h30</div>
+            <img class="logo-location" src="./images/Amadeus.png" />
+          </div>
+
+          <h2>Sophia CNCF #2</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/249669368/">Sophia CNCF #2</a>
+          //-->
+
+          <p>2 talks by <b>Cédric Lamorinière</b> and <b>David Benque</b>: Kubernetes Extensions + Pod Anomaly Detection</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/249669368/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">17 avril à 18h00</div>
+            <img class="logo-location" src="./images/Epitech.png" />
+          </div>
+
+          <h2>Cloud Study Jam - Edition Nice</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832554/">Cloud Study Jam - Edition Nice</a>
+          //-->
+
+          <p>Venez découvrir la <b>Google Cloud Platform</b> et <b>Docker</b> en participant à notre <b>Cloud Study Jam</b> organisée conjointement par le Docker Nice Meetup et le Google Developer Group Nice qui vous proposent d'y participer à Nice ou à Sophia-Antipolis au choix et en simultané</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832554/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/google.png" />
+          <div class="secondary-info">
+            <div class="date">17 avril à 18h00</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Cloud Study Jam - Edition Sophia-Antipolis</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832635/">Cloud Study Jam - Edition Sophia-Antipolis</a>
+          //-->
+
+          <p>Venez découvrir la <b>Google Cloud Platform</b> et <b>Docker</b> en participant à notre <b>Cloud Study Jam</b> organisée conjointement par le Docker Nice Meetup et le Google Developer Group Nice qui vous proposent d'y participer à Nice ou à Sophia-Antipolis au choix et en simultané</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/248832635/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">12 avril à 12h</div>
+            <img class="logo-location" src="./images/Business-Pole.png" />
+          </div>
+
+          <h2>Présentation de GitLab par <b>Rémy Coutable</b></h2>
+
+          <!--
+            <a class="title" target="_blank" href="http://www.telecom-valley.fr/12-avril-2018-commission-open-source/">Présentation de GitLab par <b>Rémy Coutable</b></a>
+          //-->
+
+          <p>La vérité sur l’affaire GitLab ! Plongez avec moi dans cette mystérieuse affaire GitLab dont on parle tant. Je vous emmènerai dans les coulisses de la machine infernale qui sort une nouvelle version tous les 22 du mois. JIRA, Trello, Travis, GitHub, Docker Hub, oubliez tout ça, GitLab sait tout faire !</p>
+
+            <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/12-avril-2018-commission-open-source/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/gfi.png" />
           <div class="secondary-info">
             <div class="date">6 avril à 18h00</div>
